<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.materialdesigncodelab.PerfilActivity"
    tools:showIn="@layout/activity_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/article_keylines"
        android:paddingRight="@dimen/md_keylines"
        android:paddingTop="@dimen/md_keylines">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="Nombre"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines" />

        <TextView
            android:id="@+id/perfil_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hint_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="Email"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines" />

        <TextView
            android:id="@+id/perfil_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hint_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="Descripcion"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines" />

        <TextView
            android:id="@+id/perfil_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hint_description" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
