<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="visible"
        android:focusableInTouchMode="true"
        tools:context=".AddChanga">

        <!-- Login progress -->

        <ScrollView
            android:id="@+id/add_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="false"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/add_changa_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_scrollFlags= "scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                </android.support.design.widget.AppBarLayout>

                <ImageButton
                    android:id="@+id/img_changa"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:srcCompat="@drawable/jardineria" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/add_changa_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_title"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <EditText
                        android:id="@+id/add_changa_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_description"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textLongMessage"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <EditText
                        android:id="@+id/add_changa_costo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="$"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number|numberDecimal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/add_changa_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:entries="@array/array_categories"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <Button
                    android:id="@+id/ok_add_changa"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#FF9800"
                    android:padding="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/action_add_changa"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>